--- a/src/src/index.css
+++ b/src/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.harm {
+  color: red;
+}
+
+.value {
+  color: green;
+}
