Added the feed layout, value-specific toggle; Made updates for highlighting algorithmic effect better; Incorporated optimization codes

--- a/src/src/App.css
+++ b/src/src/App.css
@@ -1,7 +1,9 @@
 .App {
-  width: 500px;
+  width: 1200px;
   font-family: 'PT Sans Narrow';
+  margin: 0 auto;
   padding: 20px;
+  display: flex;
 }
 
 .App-header {
